feat(NF-776): Add contest Lock Functionallity Add Field to Lock Entity to hold a contestant Add Enpoint to centest a specific lock scope Extended OpenAPI definition
