# neverpile-commons-locking/src/main/java/com/neverpile/common/locking/rest/NoOpLockServiceResource.java
@@ -28,17 +28,13 @@ import io.micrometer.core.annotation.Timed;
  */
 @RestController
 @ConditionalOnWebApplication
-@RequestMapping(
-    path = "/",
-    produces = MediaType.APPLICATION_JSON_VALUE)
+@RequestMapping(path = "/", produces = MediaType.APPLICATION_JSON_VALUE)
 @ConditionalOnMissingBean(LockService.class)
 public class NoOpLockServiceResource {
   public static final String PREFIX = "/api/v1/locks";
 
   @GetMapping(PREFIX + "/{scope}")
-  @Timed(
-      description = "get lock status",
-      value = "fusion.lock.get")
+  @Timed(description = "get lock status", value = "fusion.lock.get")
   public LockState queryLock(@PathVariable("scope") final String scope) {
     LockState fakeLock = new LockState();
     fakeLock.setOwnerId("fake");
@@ -47,12 +43,9 @@ public class NoOpLockServiceResource {
   }
 
   @PostMapping(PREFIX + "/{scope}")
-  @Timed(
-      description = "try to acquire a lock",
-      value = "fusion.lock.acquire")
-  public LockRequestResult tryAcquireLock(@PathVariable("scope") final String scope, @RequestParam(
-      name = "ownerId",
-      required = false) String ownerId) {
+  @Timed(description = "try to acquire a lock", value = "fusion.lock.acquire")
+  public LockRequestResult tryAcquireLock(@PathVariable("scope") final String scope,
+      @RequestParam(name = "ownerId", required = false) String ownerId) {
     LockState fakeLock = new LockState();
     fakeLock.setOwnerId(ownerId);
     fakeLock.setValidUntil(Instant.now().plus(30, ChronoUnit.DAYS));
@@ -61,12 +54,9 @@ public class NoOpLockServiceResource {
   }
 
   @PutMapping(PREFIX + "/{scope}")
-  @Timed(
-      description = "extend a lock",
-      value = "fusion.lock.extend")
-  public LockState extendLock(@PathVariable("scope") final String scope, @RequestParam(
-      name = "ownerId",
-      required = false) String ownerId) {
+  @Timed(description = "extend a lock", value = "fusion.lock.extend")
+  public LockState extendLock(@PathVariable("scope") final String scope,
+      @RequestParam(name = "ownerId", required = false) String ownerId) {
     LockState fakeLock = new LockState();
     fakeLock.setOwnerId(ownerId);
     fakeLock.setValidUntil(Instant.now().plus(30, ChronoUnit.DAYS));
@@ -74,18 +64,21 @@ public class NoOpLockServiceResource {
   }
 
   @DeleteMapping(PREFIX + "/{scope}")
-  @Timed(
-      description = "release a lock",
-      value = "fusion.lock.release")
+  @Timed(description = "release a lock", value = "fusion.lock.release")
   public ResponseEntity<?> release(@PathVariable("scope") final String scope) {
     return ResponseEntity.noContent().build();
   }
 
   @PostMapping("/api-noauth/v1/locks/{scope}/release")
-  @Timed(
-      description = "release a lock",
-      value = "fusion.lock.release")
+  @Timed(description = "release a lock", value = "fusion.lock.release")
   public ResponseEntity<?> releaseNoauth(@PathVariable("scope") final String scope) {
     return ResponseEntity.noContent().build();
+  }
+
+  @PostMapping(PREFIX + "/{scope}/contest")
+  @Timed(description = "try to contest a lock", value = "fusion.lock.contest")
+  public ResponseEntity<?> contestLock(@PathVariable("scope") final String scope,
+      @RequestParam(name = "contestantId", required = false) String contestantId) {
+    return ResponseEntity.ok().build();
   }
 }
